OO-8128: first implementation of curriculum management with navigation