@@ -26,12 +26,17 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.olat.basesecurity.OrganisationModule;
+import org.olat.basesecurity.OrganisationRoles;
 import org.olat.basesecurity.OrganisationService;
+import org.olat.basesecurity.model.OrganisationRefImpl;
 import org.olat.core.gui.UserRequest;
 import org.olat.core.gui.components.Component;
+import org.olat.core.gui.components.dropdown.DropdownItem;
 import org.olat.core.gui.components.form.flexible.FormItem;
 import org.olat.core.gui.components.form.flexible.FormItemContainer;
 import org.olat.core.gui.components.form.flexible.elements.FlexiTableElement;
+import org.olat.core.gui.components.form.flexible.elements.FlexiTableExtendedFilter;
+import org.olat.core.gui.components.form.flexible.elements.FlexiTableFilter;
 import org.olat.core.gui.components.form.flexible.elements.FormLink;
 import org.olat.core.gui.components.form.flexible.impl.FormBasicController;
 import org.olat.core.gui.components.form.flexible.impl.FormEvent;
@@ -44,12 +49,15 @@ import org.olat.core.gui.components.form.flexible.impl.elements.table.FlexiTable
 import org.olat.core.gui.components.form.flexible.impl.elements.table.SelectionEvent;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.StaticFlexiCellRenderer;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.StickyActionColumnModel;
+import org.olat.core.gui.components.form.flexible.impl.elements.table.filter.FlexiTableMultiSelectionFilter;
+import org.olat.core.gui.components.form.flexible.impl.elements.table.tab.FlexiFiltersTab;
+import org.olat.core.gui.components.form.flexible.impl.elements.table.tab.FlexiFiltersTabFactory;
+import org.olat.core.gui.components.form.flexible.impl.elements.table.tab.TabSelectionBehavior;
 import org.olat.core.gui.components.link.Link;
 import org.olat.core.gui.components.link.LinkFactory;
 import org.olat.core.gui.components.stack.PopEvent;
-import org.olat.core.gui.components.stack.TooledController;
 import org.olat.core.gui.components.stack.TooledStackedPanel;
-import org.olat.core.gui.components.stack.TooledStackedPanel.Align;
+import org.olat.core.gui.components.util.SelectionValues;
 import org.olat.core.gui.components.velocity.VelocityContainer;
 import org.olat.core.gui.control.Controller;
 import org.olat.core.gui.control.Event;
@@ -59,26 +67,24 @@ import org.olat.core.gui.control.generic.closablewrapper.CloseableCalloutWindowC
 import org.olat.core.gui.control.generic.closablewrapper.CloseableModalController;
 import org.olat.core.gui.control.generic.dtabs.Activateable2;
 import org.olat.core.gui.media.MediaResource;
-import org.olat.core.id.OLATResourceable;
+import org.olat.core.id.Organisation;
+import org.olat.core.id.OrganisationRef;
 import org.olat.core.id.Roles;
 import org.olat.core.id.context.BusinessControlFactory;
 import org.olat.core.id.context.ContextEntry;
 import org.olat.core.id.context.StateEntry;
 import org.olat.core.util.StringHelper;
-import org.olat.core.util.resource.OresHelper;
 import org.olat.modules.curriculum.Curriculum;
-import org.olat.modules.curriculum.CurriculumElementMembership;
-import org.olat.modules.curriculum.CurriculumElementRef;
+import org.olat.modules.curriculum.CurriculumElementStatus;
 import org.olat.modules.curriculum.CurriculumManagedFlag;
 import org.olat.modules.curriculum.CurriculumSecurityCallback;
-import org.olat.modules.curriculum.CurriculumSecurityCallbackFactory;
 import org.olat.modules.curriculum.CurriculumService;
+import org.olat.modules.curriculum.CurriculumStatus;
 import org.olat.modules.curriculum.manager.ExportCurriculumMediaResource;
-import org.olat.modules.curriculum.model.CurriculumElementRefImpl;
 import org.olat.modules.curriculum.model.CurriculumInfos;
 import org.olat.modules.curriculum.model.CurriculumSearchParameters;
 import org.olat.modules.curriculum.ui.CurriculumManagerDataModel.CurriculumCols;
-import org.olat.modules.curriculum.ui.lectures.CurriculumElementLecturesController;
+import org.olat.modules.curriculum.ui.component.CurriculumStatusCellRenderer;
 import org.olat.modules.lecture.LectureModule;
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -88,11 +94,43 @@ import org.springframework.beans.factory.annotation.Autowired;
  * @author srosse, stephane.rosse@frentix.com, http://www.frentix.com
  *
  */
-public class CurriculumListManagerController extends FormBasicController implements Activateable2, TooledController {
+public class CurriculumListManagerController extends FormBasicController implements Activateable2 {
+
+	public static final String CONTEXT_OVERVIEW = "Details";
+	public static final String CONTEXT_STRUCTURE = "Structure";
+	public static final String CONTEXT_LECTURES = "Lectures";
+	public static final String CONTEXT_IMPLEMENTATIONS = "Implementations";
+	public static final String CONTEXT_PREPARATION = "Preparation";
+	public static final String CONTEXT_PROVISIONAL = "Provisional";
+	public static final String CONTEXT_CONFIRMED = "Confirmed";
+	public static final String CONTEXT_ACTIVE = "Active";
+	public static final String CONTEXT_CANCELLED = "Cancelled";
+	public static final String CONTEXT_FINISHED = "Finished";
+	public static final String CONTEXT_DELETED = "Deleted";
+	public static final List<String> CONTEXTS = List.of(CONTEXT_OVERVIEW, CONTEXT_IMPLEMENTATIONS,
+			CONTEXT_PREPARATION, CONTEXT_PROVISIONAL, CONTEXT_CONFIRMED, CONTEXT_ACTIVE,
+			CONTEXT_CANCELLED, CONTEXT_FINISHED, CONTEXT_DELETED);
+	
+	public static final String SUB_PATH_OVERVIEW = "/" + CONTEXT_OVERVIEW + "/0";
+	public static final String SUB_PATH_IMPLEMENTATIONS = "/" + CONTEXT_IMPLEMENTATIONS + "/0";
+	public static final String SUB_PATH_PREPARATION = SUB_PATH_IMPLEMENTATIONS + "/" + CONTEXT_PREPARATION + "/0";
+	public static final String SUB_PATH_PROVISIONAL = SUB_PATH_IMPLEMENTATIONS +  "/" + CONTEXT_PROVISIONAL + "/0";
+	public static final String SUB_PATH_CONFIRMED = SUB_PATH_IMPLEMENTATIONS +  "/" + CONTEXT_CONFIRMED + "/0";
+	public static final String SUB_PATH_ACTIVE = SUB_PATH_IMPLEMENTATIONS +  "/" + CONTEXT_ACTIVE + "/0";
+	public static final String SUB_PATH_CANCELLED = SUB_PATH_IMPLEMENTATIONS +  "/" + CONTEXT_CANCELLED + "/0";
+	public static final String SUB_PATH_FINISHED = SUB_PATH_IMPLEMENTATIONS +  "/" + CONTEXT_FINISHED + "/0";
+	public static final String SUB_PATH_DELETED = SUB_PATH_IMPLEMENTATIONS +  "/" + CONTEXT_DELETED + "/0";
+	
+	private static final String ALL_TAB_ID = "All";
+
+	private static final String FILTER_STATUS = "Status";
+	private static final String FILTER_ORGANISATIONS = "Organisations";
+	
+	private FlexiFiltersTab allTab;
 	
 	private FlexiTableElement tableEl;
-	private Link newCurriculumButton;
-	private Link importCurriculumButton;
+	private FormLink newCurriculumButton;
+	private FormLink importCurriculumButton;
 	private CurriculumManagerDataModel tableModel;
 	private final TooledStackedPanel toolbarPanel;
 	
@@ -101,10 +139,9 @@ public class CurriculumListManagerController extends FormBasicController impleme
 	private CurriculumComposerController composerCtrl;
 	private EditCurriculumController newCurriculumCtrl;
 	private ImportCurriculumController importCurriculumCtrl;
-	private EditCurriculumOverviewController editCurriculumCtrl;
+	private CurriculumDetailsController editCurriculumCtrl;
 	private ConfirmCurriculumDeleteController deleteCurriculumCtrl;
 	private CloseableCalloutWindowController toolsCalloutCtrl;
-	private CurriculumElementLecturesController lecturesCtrl;
 	
 	private int counter = 0;
 	private final Roles roles;
@@ -132,44 +169,52 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		initForm(ureq);
 		loadModel(null, true);
 	}
-	
-	@Override
-	public void initTools() {
-		if(secCallback.canNewCurriculum()) {
-			importCurriculumButton = LinkFactory.createToolLink("import.curriculum", translate("import.curriculum"), this, "o_icon_import");
-			importCurriculumButton.setElementCssClass("o_sel_import_curriculum");
-			toolbarPanel.addTool(importCurriculumButton, Align.left);
-			
-			newCurriculumButton = LinkFactory.createToolLink("add.curriculum", translate("add.curriculum"), this, "o_icon_add");
-			newCurriculumButton.setElementCssClass("o_sel_add_curriculum");
-			toolbarPanel.addTool(newCurriculumButton, Align.left);
-		}
-	}
 
 	@Override
 	protected void initForm(FormItemContainer formLayout, Controller listener, UserRequest ureq) {
+		if(secCallback.canNewCurriculum()) {
+			newCurriculumButton = uifactory.addFormLink("add.curriculum", "add.curriculum", null, formLayout, Link.BUTTON);
+			newCurriculumButton.setIconLeftCSS("o_icon o_icon-fw o_icon_add");
+			newCurriculumButton.setElementCssClass("o_sel_add_curriculum");
+			
+			DropdownItem moreDropdown = uifactory.addDropdownMenuMore("more.menu", formLayout, getTranslator());
+			moreDropdown.setEmbbeded(true);
+			moreDropdown.setButton(true);
+			
+			importCurriculumButton = uifactory.addFormLink("import.curriculum", "import.curriculum", null, formLayout, Link.LINK);
+			importCurriculumButton.setElementCssClass("o_sel_import_curriculum");
+			moreDropdown.addElement(importCurriculumButton);
+		}
+		
 		FlexiTableColumnModel columnsModel = FlexiTableDataModelFactory.createFlexiTableColumnModel();
 		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.key));
 		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.displayName, "select"));
-		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.identifier, "select"));
-		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.externalId, "select"));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.externalRef));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.externalId));
 		if(organisationModule.isEnabled()) {
 			columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(isMultiOrganisations, CurriculumCols.organisation));
 		}
-		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.numOfElements));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.numOfElements, CONTEXT_IMPLEMENTATIONS));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.numOfPreparationRootElements, CONTEXT_PREPARATION));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.numOfProvisionalRootElements, CONTEXT_PROVISIONAL));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.numOfConfirmedRootElements, CONTEXT_CONFIRMED));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(CurriculumCols.numOfActiveRootElements, CONTEXT_ACTIVE));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.numOfCancelledRootElements, CONTEXT_CANCELLED));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.numOfFinishedRootElements, CONTEXT_FINISHED));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.numOfDeletedRootElements, CONTEXT_DELETED));
+		columnsModel.addFlexiColumnModel(new DefaultFlexiColumnModel(false, CurriculumCols.status,
+				new CurriculumStatusCellRenderer(getTranslator())));
+
 		if(lectureModule.isEnabled()) {
 			DefaultFlexiColumnModel lecturesCol = new DefaultFlexiColumnModel("table.header.lectures", CurriculumCols.lectures.ordinal(), "lectures",
-					new BooleanCellRenderer(new StaticFlexiCellRenderer(translate("table.header.lectures"), "lectures", null, "o_icon o_icon_lecture o_icon-fw"),
+					new BooleanCellRenderer(new StaticFlexiCellRenderer("", "lectures", null,
+							"o_icon o_icon-fw o_icon-lg o_icon_lecture", translate("table.header.lectures")),
 							null));
 			lecturesCol.setExportable(false);
+			lecturesCol.setIconHeader("o_icon o_icon-lg o_icon_lecture");
 			columnsModel.addFlexiColumnModel(lecturesCol);
 		}
 		
-		DefaultFlexiColumnModel editCol = new DefaultFlexiColumnModel("edit.icon", CurriculumCols.edit.ordinal(), "edit",
-				new BooleanCellRenderer(new StaticFlexiCellRenderer(translate("edit"), "edit"),
-						new StaticFlexiCellRenderer(translate("select"), "edit")));
-		editCol.setExportable(false);
-		columnsModel.addFlexiColumnModel(editCol);
 		if(secCallback.canEditCurriculum()) {
 			StickyActionColumnModel toolsCol = new StickyActionColumnModel(CurriculumCols.tools);
 			toolsCol.setIconHeader("o_icon o_icon-fw o_icon-lg o_icon_actions");
@@ -184,47 +229,126 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		tableEl.setSearchEnabled(true);
 		tableEl.setEmptyTableSettings("table.curriculum.empty", null, "o_icon_curriculum_element", "add.curriculum", "o_icon_add", true);
 		tableEl.setAndLoadPersistedPreferences(ureq, "cur-curriculum-manage");
+		
+		initFilters();
+		initFiltersPresets();
+		tableEl.setSelectedFilterTab(ureq, allTab);
+	}
+	
+	private void initFilters() {
+		List<FlexiTableExtendedFilter> filters = new ArrayList<>();
+		
+		if(roles.isAdministrator()) {
+			SelectionValues statusValues = new SelectionValues();
+			statusValues.add(SelectionValues.entry(CurriculumStatus.active.name(), translate("filter.active")));
+			statusValues.add(SelectionValues.entry(CurriculumStatus.deleted.name(), translate("filter.deleted")));
+			FlexiTableMultiSelectionFilter statusFilter = new FlexiTableMultiSelectionFilter(translate("filter.status"),
+					FILTER_STATUS, statusValues, true);
+			filters.add(statusFilter);
+		}
+		
+		if(isMultiOrganisations) {
+			List<Organisation> organisations = organisationService.getOrganisations(getIdentity(), roles,
+					OrganisationRoles.administrator, OrganisationRoles.curriculummanager);
+			SelectionValues organisationsValues = new SelectionValues();
+			for(Organisation organisation:organisations) {
+				organisationsValues.add(SelectionValues
+						.entry(organisation.getKey().toString(), StringHelper.escapeHtml(organisation.getDisplayName())));
+			}
+			FlexiTableMultiSelectionFilter organisationsFilter = new FlexiTableMultiSelectionFilter(translate("filter.organisations"),
+					FILTER_ORGANISATIONS, organisationsValues, true);
+			filters.add(organisationsFilter);
+		}
+
+		if(!filters.isEmpty()) {
+			tableEl.setFilters(true, filters, false, false);
+		}
+	}
+	
+	private void initFiltersPresets() {
+		List<FlexiFiltersTab> tabs = new ArrayList<>();
+		
+		allTab = FlexiFiltersTabFactory.tabWithImplicitFilters(ALL_TAB_ID, translate("filter.all"),
+				TabSelectionBehavior.nothing, List.of());
+		allTab.setFiltersExpanded(true);
+		tabs.add(allTab);
+		
+		tableEl.setFilterTabs(true, tabs);
 	}
 	
 	private void loadModel(String searchString, boolean reset) {
-		
-		// curriculum owners, curriculum manages and administrators can edit curriculums
-		// principals can only view them
-		CurriculumSearchParameters managerParams = new CurriculumSearchParameters();
-		managerParams.setSearchString(searchString);
+		CurriculumSearchParameters managerParams = getSearchParams(searchString);
 		managerParams.setCurriculumAdmin(getIdentity());
 		List<CurriculumInfos> managerCurriculums = curriculumService.getCurriculumsWithInfos(managerParams);
 		List<CurriculumRow> rows = managerCurriculums.stream()
-				.map(cur -> forgeManagedRow(cur, true)).collect(Collectors.toList());
+				.map(cur -> forgeManagedRow(cur, true))
+				.collect(Collectors.toList());
 		Set<CurriculumRow> deduplicateRows = new HashSet<>(rows);
 		
 		if(roles.isPrincipal()) {
-			CurriculumSearchParameters principalParams = new CurriculumSearchParameters();
-			principalParams.setSearchString(searchString);
+			CurriculumSearchParameters principalParams = getSearchParams(searchString);
 			principalParams.setCurriculumPrincipal(getIdentity());
 			List<CurriculumInfos> principalsCurriculums = curriculumService.getCurriculumsWithInfos(principalParams);
 			List<CurriculumRow> principalsRows = principalsCurriculums.stream()
 					.map(cur -> forgeManagedRow(cur, false))
 					.filter(row -> !deduplicateRows.contains(row))
-					.collect(Collectors.toList());
+					.toList();
 			rows.addAll(principalsRows);
 			deduplicateRows.addAll(principalsRows);
 		}
 		
-		CurriculumSearchParameters ownerParams = new CurriculumSearchParameters();
-		ownerParams.setSearchString(searchString);
+		CurriculumSearchParameters ownerParams = getSearchParams(searchString);
 		ownerParams.setElementOwner(getIdentity());
 		List<CurriculumInfos> reOwnersCurriculums = curriculumService.getCurriculumsWithInfos(ownerParams);
 		List<CurriculumRow> reOwnerRows = reOwnersCurriculums.stream()
 				.filter(c -> !managerCurriculums.contains(c))
-				.map(CurriculumRow::new)
+				.map(c -> new CurriculumRow(c, getBusinessPathUrl(c)))
 				.filter(row -> !deduplicateRows.contains(row))
-				.collect(Collectors.toList());
+				.toList();
 		
 		rows.addAll(reOwnerRows);
 		
 		tableModel.setObjects(rows);
 		tableEl.reset(reset, reset, true);
+	}
+	
+	private String getBusinessPathUrl(CurriculumInfos curriculum) {
+		String path = "[CurriculumAdmin:0][Curriculum:" + curriculum.curriculum().getKey() + "]";
+		List<ContextEntry> entries = BusinessControlFactory.getInstance().createCEListFromString(path);
+		return BusinessControlFactory.getInstance().getAsAuthURIString(entries, true);
+	}
+	
+	private CurriculumSearchParameters getSearchParams(String searchString) {
+		// curriculum owners, curriculum manages and administrators can edit curriculums
+		// principals can only view them
+		CurriculumSearchParameters searchParams = new CurriculumSearchParameters();
+		searchParams.setSearchString(searchString);
+		
+		FlexiTableFilter statusFilter = FlexiTableFilter.getFilter(tableEl.getFilters(), FILTER_STATUS);
+		if (statusFilter instanceof FlexiTableExtendedFilter extendedFilter) {
+			List<String> filterValues = extendedFilter.getValues();
+			if(filterValues != null && !filterValues.isEmpty()) {
+				List<CurriculumStatus> status = filterValues.stream()
+						.map(CurriculumStatus::valueOf).toList();
+				searchParams.setStatusList(status);
+			}
+		}
+		
+		FlexiTableFilter organisationsFilter = FlexiTableFilter.getFilter(tableEl.getFilters(), FILTER_ORGANISATIONS);
+		if (organisationsFilter instanceof FlexiTableExtendedFilter extendedFilter) {
+			List<String> filterValues = extendedFilter.getValues();
+			if(filterValues != null && !filterValues.isEmpty()) {
+				List<OrganisationRef> organisations = filterValues.stream()
+						.filter(StringHelper::isLong)
+						.map(Long::valueOf)
+						.map(OrganisationRefImpl::new)
+						.map(OrganisationRef.class::cast)
+						.toList();
+				searchParams.setOrganisations(organisations);
+			}
+		}
+		
+		return searchParams;
 	}
 	
 	/**
@@ -237,7 +361,8 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		FormLink toolsLink = uifactory.addFormLink("tools_" + (++counter), "tools", "", null, null, Link.NONTRANSLATED);
 		toolsLink.setIconLeftCSS("o_icon o_icon_actions o_icon-fws o_icon-lg");
 		toolsLink.setTitle(translate("action.more"));
-		CurriculumRow row = new CurriculumRow(curriculum, toolsLink, canManage);
+		String businessPathUrl = getBusinessPathUrl(curriculum);
+		CurriculumRow row = new CurriculumRow(curriculum, businessPathUrl, toolsLink, canManage);
 		toolsLink.setUserObject(row);
 		return row;
 	}
@@ -268,7 +393,7 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		List<CurriculumRow> rows = tableModel.getObjects();
 		for(CurriculumRow row:rows) {
 			if(curriculumKey.equals(row.getKey())) {
-				doSelectCurriculum(ureq, row, entries);
+				doOpenCurriculumDetails(ureq, row, entries);
 				break;
 			}
 		}
@@ -313,17 +438,10 @@ public class CurriculumListManagerController extends FormBasicController impleme
 
 	@Override
 	public void event(UserRequest ureq, Component source, Event event) {
-		if(newCurriculumButton == source) {
-			doNewCurriculum(ureq);
-		} else if(importCurriculumButton == source) {
-			doImportCurriculum(ureq);
-		} else if(toolbarPanel == source) {
-			if(event instanceof PopEvent) {
-				PopEvent pe = (PopEvent)event;
-				if(pe.getController() instanceof CurriculumComposerController) {
-					removeAsListenerAndDispose(composerCtrl);
-					composerCtrl = null;
-				}
+		if(toolbarPanel == source) {
+			if(event instanceof PopEvent pe && pe.getController() instanceof CurriculumComposerController) {
+				removeAsListenerAndDispose(composerCtrl);
+				composerCtrl = null;
 			}
 		}
 		super.event(ureq, source, event);
@@ -331,24 +449,26 @@ public class CurriculumListManagerController extends FormBasicController impleme
 
 	@Override
 	protected void formInnerEvent(UserRequest ureq, FormItem source, FormEvent event) {
-		if(tableEl == source) {
-			if(event instanceof SelectionEvent) {
-				SelectionEvent se = (SelectionEvent)event;
+		if(newCurriculumButton == source) {
+			doNewCurriculum(ureq);
+		} else if(importCurriculumButton == source) {
+			doImportCurriculum(ureq);
+		} else if(tableEl == source) {
+			if(event instanceof SelectionEvent se) {
 				String cmd = se.getCommand();
-				if("select".equals(cmd)) {
-					doSelectCurriculum(ureq, tableModel.getObject(se.getIndex()), null);
-				} else if("edit".equals(cmd)) {
-					doEditCurriculum(ureq, tableModel.getObject(se.getIndex()));
+				if("select".equals(cmd) || CONTEXT_OVERVIEW.equals(cmd)) {
+					doOpenCurriculumDetails(ureq, tableModel.getObject(se.getIndex()));
 				} else if("lectures".equals(cmd)) {
-					doOpenLectures(ureq, tableModel.getObject(se.getIndex()));
-				} 
-			} else if(event instanceof FlexiTableSearchEvent) {
-				doSearch((FlexiTableSearchEvent)event);
+					doOpenCurriculumLectures(ureq, tableModel.getObject(se.getIndex()));
+				} else if(CurriculumElementStatus.isValueOf(cmd.toLowerCase())) {
+					doOpenCurriculumImplementations(ureq, tableModel.getObject(se.getIndex()), cmd);
+				}
+			} else if(event instanceof FlexiTableSearchEvent ftse) {
+				doSearch(ftse);
 			} else if (event instanceof FlexiTableEmptyNextPrimaryActionEvent) {
 				doNewCurriculum(ureq);
 			}
-		} else if (source instanceof FormLink) {
-			FormLink link = (FormLink)source;
+		} else if (source instanceof FormLink link) {
 			String cmd = link.getCmd();
 			if("tools".equals(cmd)) {
 				doOpenTools(ureq, (CurriculumRow)link.getUserObject(), link);
@@ -383,19 +503,6 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		cmc.activate();
 	}
 	
-	private void doEditCurriculum(UserRequest ureq, CurriculumRow row) {
-		removeAsListenerAndDispose(editCurriculumCtrl);
-		
-		Curriculum curriculum = curriculumService.getCurriculum(row);
-		if(curriculum == null) {
-			showWarning("warning.curriculum.deleted");
-		} else {
-			editCurriculumCtrl = new EditCurriculumOverviewController(ureq, getWindowControl(), curriculum, secCallback);
-			listenTo(editCurriculumCtrl);
-			toolbarPanel.pushController(row.getDisplayName(), editCurriculumCtrl);
-		}
-	}
-	
 	private void doDeleteCurriculum(UserRequest ureq, CurriculumRow row) {
 		removeAsListenerAndDispose(deleteCurriculumCtrl);
 		removeAsListenerAndDispose(cmc);
@@ -420,37 +527,39 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		ureq.getDispatchResult().setResultingMediaResource(mr);
 	}
 	
-	private void doSelectCurriculum(UserRequest ureq, CurriculumRow row, List<ContextEntry> entries) {
+	private void doOpenCurriculumDetails(UserRequest ureq, CurriculumRow row) {
+		doOpenCurriculumDetails(ureq, row, List.of());
+	}
+	
+	private void doOpenCurriculumImplementations(UserRequest ureq, CurriculumRow row, String status) {
+		List<ContextEntry> context = BusinessControlFactory.getInstance()
+				.createCEListFromString("[Implementations:0][" + status + ":0]");
+		doOpenCurriculumDetails(ureq, row, context);
+	}
+	
+	private void doOpenCurriculumLectures(UserRequest ureq, CurriculumRow row) {
+		List<ContextEntry> context = BusinessControlFactory.getInstance()
+				.createCEListFromString("[Lectures:0]");
+		doOpenCurriculumDetails(ureq, row, context);
+	}
+	
+	private void doOpenCurriculumDetails(UserRequest ureq, CurriculumRow row, List<ContextEntry> entries) {
+		removeAsListenerAndDispose(editCurriculumCtrl);
+		
 		Curriculum curriculum = curriculumService.getCurriculum(row);
 		if(curriculum == null) {
 			showWarning("warning.curriculum.deleted");
 		} else {
-			WindowControl swControl = addToHistory(ureq, OresHelper.createOLATResourceableInstance(Curriculum.class, row.getKey()), null);
-			boolean canManage = row.canManage();
-			List<CurriculumElementMembership> memberships = curriculumService.getCurriculumElementMemberships(curriculum, getIdentity());
-			List<CurriculumElementRef> ownedElements = memberships.stream()
-					.filter(CurriculumElementMembership::isCurriculumElementOwner)
-					.map(m -> new CurriculumElementRefImpl(m.getCurriculumElementKey()))
-					.collect(Collectors.toList());
-			CurriculumSecurityCallback curriculumSecCallback = CurriculumSecurityCallbackFactory.createCallback(canManage, ownedElements);
-			composerCtrl = new CurriculumComposerController(ureq, swControl, toolbarPanel, curriculum, curriculumSecCallback);
-			listenTo(composerCtrl);
-			toolbarPanel.pushController(row.getDisplayName(), composerCtrl);
-			composerCtrl.activate(ureq, entries, null);
+			editCurriculumCtrl = new CurriculumDetailsController(ureq, getWindowControl(), toolbarPanel, curriculum, secCallback);
+			listenTo(editCurriculumCtrl);
+			
+			String crumb = row.getExternalRef();
+			if(!StringHelper.containsNonWhitespace(crumb)) {
+				crumb = row.getDisplayName();
+			}
+			toolbarPanel.pushController(crumb, editCurriculumCtrl);
+			editCurriculumCtrl.activate(ureq, entries, null);
 		}
-	}
-	
-	private void doOpenLectures(UserRequest ureq, CurriculumRow row) {
-		removeAsListenerAndDispose(lecturesCtrl);
-		
-		OLATResourceable ores = OresHelper.createOLATResourceableInstance("Lectures", row.getKey());
-		WindowControl bwControl = BusinessControlFactory.getInstance().createBusinessWindowControl(ores, null, getWindowControl());
-		Curriculum curriculum = curriculumService.getCurriculum(row);
-		lecturesCtrl = new CurriculumElementLecturesController(ureq, bwControl, toolbarPanel, curriculum, null, true, secCallback);
-		listenTo(lecturesCtrl);
-		toolbarPanel.pushController(row.getDisplayName(), null, row);
-		toolbarPanel.pushController(translate("lectures"), lecturesCtrl);
-		
 	}
 	
 	private void doOpenTools(UserRequest ureq, CurriculumRow row, FormLink link) {
@@ -514,7 +623,7 @@ public class CurriculumListManagerController extends FormBasicController impleme
 		protected void event(UserRequest ureq, Component source, Event event) {
 			if(editLink == source) {
 				close();
-				doEditCurriculum(ureq, row);
+				doOpenCurriculumDetails(ureq, row, List.of());
 			} else if(deleteLink == source) {
 				close();
 				doDeleteCurriculum(ureq, row);
