@@ -19,15 +19,35 @@
  */
 package org.olat.modules.curriculum.ui;
 
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_ACTIVE;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_CANCELLED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_CONFIRMED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_DELETED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_FINISHED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_IMPLEMENTATIONS;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_OVERVIEW;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_PREPARATION;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.CONTEXT_PROVISIONAL;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_ACTIVE;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_CANCELLED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_CONFIRMED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_DELETED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_FINISHED;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_IMPLEMENTATIONS;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_OVERVIEW;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_PREPARATION;
+import static org.olat.modules.curriculum.ui.CurriculumListManagerController.SUB_PATH_PROVISIONAL;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 import org.olat.core.commons.persistence.SortKey;
+import org.olat.core.gui.components.Component;
 import org.olat.core.gui.components.form.flexible.elements.FlexiTableFilter;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.DefaultFlexiTableDataModel;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.FilterableFlexiTableModel;
+import org.olat.core.gui.components.form.flexible.impl.elements.table.FlexiBusinessPathModel;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.FlexiSortableColumnDef;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.FlexiTableColumnModel;
 import org.olat.core.gui.components.form.flexible.impl.elements.table.SortableFlexiTableDataModel;
@@ -39,7 +59,9 @@ import org.olat.core.gui.components.form.flexible.impl.elements.table.SortableFl
  *
  */
 public class CurriculumManagerDataModel extends DefaultFlexiTableDataModel<CurriculumRow>
-implements SortableFlexiTableDataModel<CurriculumRow>, FilterableFlexiTableModel {
+implements SortableFlexiTableDataModel<CurriculumRow>, FilterableFlexiTableModel, FlexiBusinessPathModel {
+	
+	private static final CurriculumCols[] COLS = CurriculumCols.values();
 	
 	private final Locale locale;
 	private List<CurriculumRow> backups;
@@ -65,11 +87,11 @@ implements SortableFlexiTableDataModel<CurriculumRow>, FilterableFlexiTableModel
 			if("active".equals(filter.getFilter())) {
 				filteredRows = backups.stream()
 						.filter(CurriculumRow::isActive)
-						.collect(Collectors.toList());
+						.toList();
 			} else if("inactive".equals(filter.getFilter())) {
 				filteredRows = backups.stream()
 						.filter(node -> !node.isActive())
-						.collect(Collectors.toList());
+						.toList();
 			} else {
 				filteredRows = new ArrayList<>(backups);
 			}
@@ -80,6 +102,28 @@ implements SortableFlexiTableDataModel<CurriculumRow>, FilterableFlexiTableModel
 	}
 
 	@Override
+	public String getUrl(Component source, Object object, String action) {
+		if(object instanceof CurriculumRow row) {
+			if(action == null || row.getBaseUrl() == null) {
+				return row.getBaseUrl();
+			}
+			return switch(action) {
+				case CONTEXT_OVERVIEW -> row.getBaseUrl().concat(SUB_PATH_OVERVIEW);
+				case CONTEXT_IMPLEMENTATIONS -> row.getBaseUrl().concat(SUB_PATH_IMPLEMENTATIONS);
+				case CONTEXT_PREPARATION -> row.getBaseUrl().concat(SUB_PATH_PREPARATION);
+				case CONTEXT_PROVISIONAL -> row.getBaseUrl().concat(SUB_PATH_PROVISIONAL);
+				case CONTEXT_CONFIRMED -> row.getBaseUrl().concat(SUB_PATH_CONFIRMED);
+				case CONTEXT_ACTIVE -> row.getBaseUrl().concat(SUB_PATH_ACTIVE);
+				case CONTEXT_CANCELLED -> row.getBaseUrl().concat(SUB_PATH_CANCELLED);
+				case CONTEXT_FINISHED -> row.getBaseUrl().concat(SUB_PATH_FINISHED);
+				case CONTEXT_DELETED -> row.getBaseUrl().concat(SUB_PATH_DELETED);
+				default -> row.getBaseUrl();
+			};
+		}
+		return null;
+	}
+
+	@Override
 	public Object getValueAt(int row, int col) {
 		CurriculumRow curriculum = getObject(row);
 		return getValueAt(curriculum, col);
@@ -87,19 +131,26 @@ implements SortableFlexiTableDataModel<CurriculumRow>, FilterableFlexiTableModel
 
 	@Override
 	public Object getValueAt(CurriculumRow row, int col) {
-		switch(CurriculumCols.values()[col]) {
-			case key: return row.getKey();
-			case active: return row.isActive();
-			case displayName: return row.getDisplayName();
-			case identifier: return row.getIdentifier();
-			case externalId: return row.getExternalId();
-			case organisation: return row.getOrganisation();
-			case numOfElements: return row.getNumOfElements();
-			case lectures: return row.isLecturesEnabled();
-			case edit: return row.canManage();
-			case tools: return row.getTools();
-			default: return "ERROR";
-		}
+		return switch(COLS[col]) {
+			case key -> row.getKey();
+			case active -> row.isActive();
+			case displayName -> row.getDisplayName();
+			case externalRef -> row.getExternalRef();
+			case externalId -> row.getExternalId();
+			case organisation -> row.getOrganisation();
+			case numOfElements -> row.getImplementationsStatistics().numOfRootElements();
+			case numOfPreparationRootElements -> row.getImplementationsStatistics().numOfPreparationRootElements();
+			case numOfProvisionalRootElements -> row.getImplementationsStatistics().numOfProvisionalRootElements();
+			case numOfConfirmedRootElements -> row.getImplementationsStatistics().numOfConfirmedRootElements();
+			case numOfActiveRootElements -> row.getImplementationsStatistics().numOfActiveRootElements();
+			case numOfCancelledRootElements -> row.getImplementationsStatistics().numOfCancelledRootElements();
+			case numOfFinishedRootElements -> row.getImplementationsStatistics().numOfFinishedRootElements();
+			case numOfDeletedRootElements -> row.getImplementationsStatistics().numOfDeletedRootElements();
+			case status -> row.getStatus();
+			case lectures -> row.isLecturesEnabled();
+			case tools -> row.getTools();
+			default -> "ERROR";
+		};
 	}
 	
 	@Override
@@ -112,11 +163,18 @@ implements SortableFlexiTableDataModel<CurriculumRow>, FilterableFlexiTableModel
 		key("table.header.key"),
 		active("table.header.active"),
 		displayName("table.header.displayName"),
-		identifier("table.header.identifier"),
+		externalRef("table.header.external.ref"),
 		externalId("table.header.external.id"),
 		numOfElements("table.header.num.elements"),
+		numOfPreparationRootElements("table.header.num.elements.preparation"),
+		numOfProvisionalRootElements("table.header.num.elements.provisional"),
+		numOfConfirmedRootElements("table.header.num.elements.confirmed"),
+		numOfActiveRootElements("table.header.num.elements.active"),
+		numOfCancelledRootElements("table.header.num.elements.cancelled"),
+		numOfFinishedRootElements("table.header.num.elements.finished"),
+		numOfDeletedRootElements("table.header.num.elements.deleted"),
+		status("table.header.status"),
 		lectures("table.header.lectures"),
-		edit("edit.icon"),
 		tools("table.header.tools"),
 		organisation("table.header.organisation");
 		
